--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,4 +1,44 @@
 <%= content_for :page_title do %> 
   Dashboard
 <% end %>
-This is our dashboard
+
+
+<div class="mt-4">
+  <h3 class="text-lg leading-6 font-medium text-gray-900">Payments balance</h3>
+  <dl class="mt-5 grid grid-cols-1 gap-5 sm:grid-cols-3">
+    <div class="px-4 py-5 bg-white shadow rounded-lg overflow-hidden sm:p-6">
+      <dt class="text-sm font-medium text-gray-500 truncate">Available</dt>
+      <dd class="mt-1 text-3xl font-semibold text-gray-900"><%= number_to_currency(@payments_balances.available.first.amount / 100.0) %></dd>
+    </div>
+
+    <div class="px-4 py-5 bg-white shadow rounded-lg overflow-hidden sm:p-6">
+      <dt class="text-sm font-medium text-gray-500 truncate">Instant available</dt>
+      <dd class="mt-1 text-3xl font-semibold text-gray-900"><%= number_to_currency(@payments_balances.instant_available.first.amount / 100.0) %></dd>
+    </div>
+
+    <div class="px-4 py-5 bg-white shadow rounded-lg overflow-hidden sm:p-6">
+      <dt class="text-sm font-medium text-gray-500 truncate">Pending</dt>
+      <dd class="mt-1 text-3xl font-semibold text-gray-900"><%= number_to_currency(@payments_balances.pending.first.amount / 100.0) %></dd>
+    </div>
+  </dl>
+</div>
+
+<div class="mt-4">
+  <h3 class="text-lg font-medium text-gray-900">Financial account balance</h3>
+  <dl class="mt-5 grid grid-cols-1 gap-5 sm:grid-cols-3">
+    <div class="px-4 py-5 bg-white shadow rounded-lg overflow-hidden sm:p-6">
+      <dt class="text-sm font-medium text-gray-500 truncate">Cash</dt>
+      <dd class="mt-1 text-3xl font-semibold text-gray-900"><%= number_to_currency(@financial_balances.cash.usd / 100.0) %></dd>
+    </div>
+
+    <div class="px-4 py-5 bg-white shadow rounded-lg overflow-hidden sm:p-6">
+      <dt class="text-sm font-medium text-gray-500 truncate">Inbound pending</dt>
+      <dd class="mt-1 text-3xl font-semibold text-gray-900"><%= number_to_currency(@financial_balances.inbound_pending.usd / 100.0) %></dd>
+    </div>
+
+    <div class="px-4 py-5 bg-white shadow rounded-lg overflow-hidden sm:p-6">
+      <dt class="text-sm font-medium text-gray-500 truncate">Outbound pending</dt>
+      <dd class="mt-1 text-3xl font-semibold text-gray-900"><%= number_to_currency(@financial_balances.outbound_pending.usd / 100.0) %></dd>
+    </div>
+  </dl>
+</div>
