--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -23,6 +23,17 @@
   </dl>
 </div>
 
+<form action="/payouts" method="post" data-turbo="false" class="mt-4">
+  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+  <button type="submit" class="inline-flex items-center px-2 py-2 border border-transparent shadow-sm text-base font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+    Payout
+
+    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+      <path stroke-linecap="round" stroke-linejoin="round" d="M19 13l-7 7-7-7m14-8l-7 7-7-7" />
+    </svg>
+  </button>
+</form>
+
 <div class="mt-4">
   <h3 class="text-lg font-medium text-gray-900">Financial account balance</h3>
   <dl class="mt-5 grid grid-cols-1 gap-5 sm:grid-cols-3">
