--- a/app/views/stores/products/index.html.erb
+++ b/app/views/stores/products/index.html.erb
@@ -1,4 +1,4 @@
-<h2 class="text-2xl font-extrabold tracking-tight text-gray-900">
+<h2 class="text-2xl font-extrabold tracking-tight text-gray-900 mt-4">
   Store
 </h2>
 
