--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,13 +1,44 @@
-<%= image_tag @product.photo.representation(:thumb) %>
-<%= image_tag @product.photo.representation(:medium) %>
+<%= content_for :page_title do %>
+<%= @product.name %>
+<% end %>
 
+<div class="flex mt-8">
 
+  <div>
+    <%= image_tag @product.photo.representation(:medium) %>
+  </div>
 
-<form action="/checkout" method="POST" data-turbo="false">
-  <input type="hidden" name="product_id" value="<%= @product.id %>">
-  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+  <div class="flex-auto px-4 sm:px-6 lg:px-8">
+    <div class="sm:flex sm:items-center">
+      <div class="sm:flex-auto">
+        <h1 class="text-xl font-semibold text-gray-900">Attachments</h1>
+        <p class="mt-2 text-sm text-gray-700">A list of all the attachments that customers have access to when they buy <%= @product.name %>.</p>
+      </div>
+      <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none">
+      </div>
+    </div>
+    <div class="mt-8 flex flex-col">
+      <div class="-my-2 -mx-4 overflow-x-auto sm:-mx-6 lg:-mx-8">
+        <div class="inline-block min-w-full py-2 align-middle md:px-6 lg:px-8">
+          <div class="overflow-hidden shadow ring-1 ring-black ring-opacity-5 md:rounded-lg">
+            <table class="min-w-full divide-y divide-gray-300">
+              <thead class="bg-gray-50">
+                <tr>
+                  <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Name</th>
+                  <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Views</th>
+                  <th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-6">
+                    <span class="sr-only">Edit</span>
+                  </th>
+                </tr>
+              </thead>
+              <tbody class="divide-y divide-gray-200 bg-white">
 
-  <button type="submit" class="inline-flex items-center px-4 py-2 border border-transparent text-base font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700">
-    Checkout
-  </button>
-</form>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
