--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -8,6 +8,7 @@
     <%= image_tag @product.photo.representation(:medium) %>
   </div>
 
+  <!-- This example requires Tailwind CSS v2.0+ -->
   <div class="flex-auto px-4 sm:px-6 lg:px-8">
     <div class="sm:flex sm:items-center">
       <div class="sm:flex-auto">
@@ -32,7 +33,19 @@
                 </tr>
               </thead>
               <tbody class="divide-y divide-gray-200 bg-white">
-
+                <% @product.attachments.each do |attachment| %>
+                <tr>
+                  <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6">
+                    <%= attachment.name %>
+                  </td>
+                  <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6">
+                    <%= attachment.views_count %>
+                  </td>
+                  <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
+                    <a href="#" class="text-blue-600 hover:text-blue-900">Edit<span class="sr-only">, Lindsay Walton</span></a>
+                  </td>
+                </tr>
+                <% end %>
               </tbody>
             </table>
           </div>
@@ -40,5 +53,26 @@
       </div>
     </div>
 
+    <form action="<%= product_attachments_path(@product) %>" method="post" class="mt-8">
+      <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+      <div>
+        <label for="name" class="block text-sm font-medium text-gray-700">Name</label>
+        <div class="mt-1">
+          <input type="text" name="attachment[name]" id="name" class="shadow-sm focus:ring-blue-500 focus:border-blue-500 block w-full sm:text-sm border-gray-300 rounded-md">
+        </div>
+      </div>
+
+      <div>
+        <label for="file" class="block text-sm font-medium text-gray-700">File</label>
+        <div class="mt-1">
+          <input type="file" id="file" data-direct-upload-url="<%= rails_direct_uploads_url %>" name="attachment[file]" class="bg-white py-2 px-3 border border-gray-300 rounded-md shadow-sm text-sm leading-4 font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+        </div>
+      </div>
+      <div class="mt-4">
+        <button type="submit" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+          Add Attachment
+        </button>
+      </div>
+    </form>
   </div>
 </div>
