--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -2,7 +2,7 @@
   Dashboard
 <% end %>
 
-
+<% if !current_user.account.nil? %>
 <div class="mt-4">
   <h3 class="text-lg leading-6 font-medium text-gray-900">Payments balance</h3>
   <dl class="mt-5 grid grid-cols-1 gap-5 sm:grid-cols-3">
@@ -53,3 +53,6 @@
     </div>
   </dl>
 </div>
+<% else %>
+  Create an account to get started <a href="/accounts">here</a>.
+<% end %>
