--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,6 +12,12 @@
       <form class="space-y-6" action="/users" method="POST" data-turbo='false'>
         <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>"> 
         <div>
+          <label for="subdomain" class="block text-sm font-medium text-gray-700">Subdomain</label>
+          <div class="mt-1">
+            <input id="email" name="user[store_attributes][subdomain]" type="text"  required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm">
+          </div>
+        </div>
+        <div>
           <label for="email" class="block text-sm font-medium text-gray-700"> Email address </label>
           <div class="mt-1">
             <input id="email" name="user[email]" type="email" autocomplete="email" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm">
